--- a/.github/workflows/scryfallstats.yml
+++ b/.github/workflows/scryfallstats.yml
@@ -13,12 +13,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Restore cached Scryfall data
-        uses: actions/cache@v4
+        id: cache-data-restore
+        uses: actions/cache/restore@v4
         with:
+          key: scryfall-cache-${{ github.ref_name }}
           path: |
             cache.db
             scryfall_revision_cache.json
-          key: scryfall-cache-${{ github.ref_name }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -69,3 +70,13 @@ jobs:
           name: workflow-logs
           path: "**/*.log"
           if-no-files-found: warn
+
+      - name: Always cache cache data
+        id: cache-save
+        if: always() && steps.cache-data-restore.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          key: ${{ steps.cache-data-restore.outputs.cache-primary-key }}
+          path: |
+            cache.db
+            scryfall_revision_cache.json
